--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^9.0.3",
     "lenis": "^1.3.16",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
